--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,15 @@ dependencies:
   file_picker: ^5.0.1
   fl_chart: ^0.55.1
   flex_color_picker: ^3.0.0
-  flutter_localizations:
-    sdk: flutter
   flip_card: ^0.7.0
   flutter:
     sdk: flutter
+  flutter_advanced_drawer: ^1.3.4
   flutter_animated_button: ^2.0.2
   flutter_colorpicker: ^1.0.3
+  flutter_inset_box_shadow: ^1.0.8
+  flutter_localizations:
+    sdk: flutter
   flutter_markdown: ^0.6.10+5
   flutter_masked_text2: ^0.9.1
   flutter_portal: ^1.1.1
@@ -56,29 +58,26 @@ dependencies:
   fluttertoast: ^8.0.9
   font_awesome_flutter: ^10.1.0
   go_router: ^6.0.2
-  google_fonts: ^3.0.1
+  google_fonts: ^5.0.1
   graphql_flutter: ^5.1.0
-  http: ^0.13.5
+  http: ^1.0.0
   image_picker: ^0.8.5+3
-  internet_file: ^1.2.0
   intl: ^0.18.0
   liquid_progress_indicator: ^0.4.0
   multi_select_flutter: ^4.1.2
   path: ^1.8.2
   pdfx: ^2.3.0
   photo_view: ^0.14.0
+  pluto_grid: ^7.0.2
   provider: ^6.0.3
+  responsive_builder: ^0.7.0
+  rive: ^0.11.14
   shared_preferences: ^2.0.15
+  simple_gradient_text: ^1.2.4
   speech_to_text: ^6.1.1
   supabase_flutter: ^1.4.0
   url_strategy: ^0.2.0
   uuid: ^3.0.6
-  responsive_builder: ^0.7.0
-  flutter_advanced_drawer: ^1.3.4
-  flutter_inset_box_shadow: ^1.0.8
-  simple_gradient_text: ^1.2.4
-  rive: ^0.10.3
-  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
