--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,13 @@ dependencies:
   flutter_advanced_drawer: ^1.3.4
   flutter_animated_button: ^2.0.2
   flutter_colorpicker: ^1.0.3
+  flutter_file_downloader: ^1.1.2
   flutter_inset_box_shadow: ^1.0.8
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.6.10+5
   flutter_masked_text2: ^0.9.1
+  flutter_platform_widgets: ^3.3.5
   flutter_portal: ^1.1.1
   flutter_secure_storage: ^7.0.1
   flutter_spinkit: ^5.1.0
